src/test/deca/context/invalid/created/return/return_void_float.deca
// Description :
//    return mauvais type : float, demandé void
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
void met(){
return 0.5;
}
}